Adds logic to show the number after clicking it and a feature for flagging mines

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,15 @@
     <div id="game-screen">
         <h2> -- Minesweeper -- </h2>
         <div id="board">
+            <div id="header">
+                <div>
+                    <h3> Mines' Table Header </h3>
+                </div> 
+                <div id="div_checkbox">
+                    <input type="checkbox" id="select_mine" name="select_mine" value="true"> 
+                    <label id="select_mine">Select mine</label>
+                </div>
+            </div>
             <div id="mines-grid"></div>
         </div>
     </div>
