Adds game-over, right click feature to flag mines. Starts the recursive function to make possible to extends zeros when you click on a zero.

--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,11 @@
                 <div>
                     <h3> Mines' Table Header </h3>
                 </div> 
-                <div id="div_checkbox">
-                    <input type="checkbox" id="select_mine" name="select_mine" value="true"> 
-                    <label id="select_mine">Select mine</label>
+                <div id="div-mines-discovered">
+                    0
+                </div>
+                <div id="reset-button" onclick="reset()">
+                    Reset
                 </div>
             </div>
             <div id="mines-grid"></div>
