--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
                 <div id="div-mines-discovered">
                     0
                 </div>
-                <div id="reset-button" onclick="reset()">
-                    Reset
+                <div id="reset-button">
+                    <a href="./index.html">Reset</a>
                 </div>
             </div>
             <div id="mines-grid"></div>
