--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js"></script>
     <script src="../js/arrayCreation.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <title>Document</title>
@@ -29,7 +29,7 @@
                     </select>
                 </div>
             </div>
-            <div id="mines-grid"></div>
+            <div id="grid-wrapper"><div id="mines-grid"></div></div>
         </div>
     </div>
 </body>
