Adds icons for reset the game from header panel

--- a/html/index.html
+++ b/html/index.html
@@ -14,12 +14,13 @@
         <h2> -- Minesweeper -- </h2>
         <div id="board">
             <div id="header">
-                <div>
+                <!-- <div>
                     <h3> Mines' Table Header </h3>
-                </div> 
+                </div> --> 
                 <div id="div-mines-discovered">
                     0
                 </div>
+                <button id="reset-icon" type="button" onclick="startover()"><img src="../icons/smile-face.svg"></button>
                 <div id="reset-button">
                     <select name="difficulty" id="difficulty">
                         <option value="beginner">Beginner</option>
