Adds high-score feature. This is the first version capable to go into production

--- a/html/index.html
+++ b/html/index.html
@@ -6,21 +6,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js"></script>
     <script src="../js/arrayCreation.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Document</title>
 </head>
 <body>
     <div id="game-screen">
-        <h2> -- Minesweeper -- </h2>
         <div id="board">
-            <div id="header">
-                <!-- <div>
-                    <h3> Mines' Table Header </h3>
-                </div> --> 
-                <div id="div-mines-discovered">
-                    0
-                </div>
-                <button id="reset-icon" type="button" onclick="startover()"><img src="../icons/smile-face.svg"></button>
+            <h2> -- Minesweeper -- </h2>
+            <div id="header-top">
+                <button type="button" onclick="showWindow(0, false, true)"> High Scores: </button>
                 <div id="reset-button">
                     <select name="difficulty" id="difficulty">
                         <option value="beginner">Beginner</option>
@@ -29,6 +24,16 @@
                         <option value="expert">Expert</option>
                     </select>
                 </div>
+            </div>
+            <div id="header">
+                <!-- <div>
+                    <h3> Mines' Table Header </h3>
+                </div> --> 
+                <div id="div-mines-discovered">
+                    0
+                </div>
+                <button id="reset-icon" type="button" onclick="startover()"><img src="../icons/smile-face.svg"></button>
+                <div id="timer"><span class="value">0</span> s</div>
             </div>
             <div id="grid-wrapper"><div id="mines-grid"></div></div>
         </div>
